Change non-JS sign in label

--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -44,7 +44,7 @@
         <div class="js-profile-nav js-hidden">
             <a href="@Configuration.id.url/signin" data-link-name="User profile" data-control-for="nav-popup-profile" class="control control--profile">
                 <i class="i i-nav-divider"></i>
-                <span class="js-profile-info control--profile__info">Your profile</span>
+                <span class="js-profile-info control--profile__info">Sign in</span>
                 <i class="i i-profile"></i>
             </a>
         </div>
