--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -21,7 +21,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 99;
+    z-index: 1050; // On top of Google "Adchoices" label which has z-index: 1040…
 
     /* These styles extend the top bars to the screen edges */
     @include mq(tablet) {
