--- a/common/app/assets/stylesheets/module/_search.scss
+++ b/common/app/assets/stylesheets/module/_search.scss
@@ -2,6 +2,11 @@
     min-height: 47px;
 }
 
+.gsc-search-box {
+    padding: 0;
+    max-width: none;
+}
+
 .search-box {
     margin: 0 $gutter;
 }
