--- a/common/app/assets/stylesheets/module/_search.scss
+++ b/common/app/assets/stylesheets/module/_search.scss
@@ -1,5 +1,26 @@
 .nav-popup-search {
     min-height: 47px;
+
+    @include mq(tablet) {
+        right: 0;
+        max-width: 512px;
+
+        &:before,
+        &:after {
+            content: '';
+            display: block;
+            width: 1px;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            background: rgb(227,227,219);
+        }
+    }
+    @include mq(1117px) { // When the layout starts to be centered
+        right: -1px;
+        &:after { left: auto; right: 0; }
+    }
 }
 
 .gsc-search-box {
