--- a/common/app/assets/stylesheets/module/nav/_control.scss
+++ b/common/app/assets/stylesheets/module/nav/_control.scss
@@ -93,7 +93,7 @@ span.control__menu.i-menu {
     @include mq(tablet) {
         margin-right: $gutter/4*3;
         border-color: #BBBBBB;
-        background-color: #E3E3DB;
+        background-color: $darkMushroom;
     }
 }
 
